// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<button
  className="view-button normal"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "width": "auto",
    }
  }
/>
`;

exports[`changes the class when hovered 2`] = `
<button
  className="view-button hovered"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "width": "auto",
    }
  }
/>
`;

exports[`changes the class when hovered 3`] = `
<button
  className="view-button normal"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "width": "auto",
    }
  }
/>
`;
